force-app/main/default/objects/Infrasoft_Student__c/Infrasoft_Student__c.object-meta.xml
<CustomObject>
    <label>Infrasoft Student</label>
    <nameField>
        <displayFormat>STD-{0000}</displayFormat>
        <label>Infrasoft Student  Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Infrasoft Students</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>