force-app/main/default/objects/Infrasoft_Student__c/fields/Course_Fee__c.field-meta.xml
<CustomField>
    <fullName>Course_Fee__c</fullName>
    <label>Course Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>