force-app/main/default/objects/Infrasoft_Student__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <inlineHelpText>Email of the Student</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>